-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 7u60
-
Component/s: hotspot
-
b18
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8008040 | 8 | Serguei Spitsyn | P3 | Resolved | Fixed | b77 |
| JDK-8033504 | 7u80 | Serguei Spitsyn | P3 | Resolved | Fixed | b01 |
| JDK-8034523 | 7u65 | Serguei Spitsyn | P3 | Resolved | Fixed | b01 |
| JDK-8032621 | 7u60 | Serguei Spitsyn | P3 | Closed | Fixed | b05 |
The RedefineClasses merges constant pools and rewrite in the VM_RedefineClasses::merge_cp_and_rewrite().
The function VM_RedefineClasses::rewrite_cp_refs_in_method() that is called recursively must support the invokedynamic bytecode.
For details, please, refer to the interpreter/rewrite.cpp::Rewriter::rewrite_invokedynamic().
The function VM_RedefineClasses::rewrite_cp_refs_in_method() that is called recursively must support the invokedynamic bytecode.
For details, please, refer to the interpreter/rewrite.cpp::Rewriter::rewrite_invokedynamic().
- backported by
-
JDK-8008040 JSR 292: the VM_RedefineClasses::rewrite_cp_refs_in_method() must support invokedynamic
-
- Resolved
-
-
JDK-8033504 JSR 292: the VM_RedefineClasses::rewrite_cp_refs_in_method() must support invokedynamic
-
- Resolved
-
-
JDK-8034523 JSR 292: the VM_RedefineClasses::rewrite_cp_refs_in_method() must support invokedynamic
-
- Resolved
-
-
JDK-8032621 JSR 292: the VM_RedefineClasses::rewrite_cp_refs_in_method() must support invokedynamic
-
- Closed
-